removing api key

--- a/MapApp/map.html
+++ b/MapApp/map.html
@@ -8,7 +8,7 @@
             async defer></script>
 
     <script type="text/javascript">
-        var key = "ArTL45SDeNEEpZKTDiYerlb_VECitBTORuvHBNK2cYcVqfL3UzbDErUSiuG9S_j9";
+        var key = "<api_key>";
 
         function GetMap() {
             map = new Microsoft.Maps.Map('#myMap', {
